--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,11 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_movie_48dp"
         android:label="@string/app_name"
+        android:name=".MovieApp"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".view.movies.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -22,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DetailMovieActivity"
+            android:name=".view.detailMovie.DetailMovieActivity"
             android:label="@string/title_activity_detail_movie"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
